--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     container_name: mysql
     restart: unless-stopped
     tty: true
+    volumes:
+      - ./mysql:/var/lib/mysql
     ports:
       - "4306:3306"
     environment:
